syntax = "proto3";
option go_package = "github.com/decentralized-chat/chat_message";
package chat_message;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Address {
  string ip = 1;
  uint32 port = 2;
}

message User {
  string username = 1;
  Address addr = 2;
}

message ContentMessage {
  User from = 1;
  google.protobuf.Timestamp sent_at = 2;
  string content = 3; 
}

message AckMessage {
  User from = 1;
  google.protobuf.Timestamp sent_at = 2;
}

message UserInfo {
  User user = 1;
}

message ConnectionMessage {
  User user = 1;
}

service ChatService {
  rpc GetUsername(google.protobuf.Empty) returns (UserInfo);
  rpc SendMessage(ContentMessage) returns (AckMessage);
  rpc RequestConnection(ConnectionMessage) returns (AckMessage);
  rpc Disconnect(ConnectionMessage) returns (AckMessage);
}